Fix: Increase space between video and footer on mobile

--- a/public/style.css
+++ b/public/style.css
@@ -167,7 +167,7 @@ footer {
     left: 0;
     height: 50px;
     box-shadow: none;
-    margin-top: 40px; /* Add extra space between footer and content above */
+    
 }
 
 footer::before {
@@ -178,7 +178,7 @@ footer::before {
     width: 100%;
     height: 50px;
     background: linear-gradient(to top, #710e37, rgba(113, 14, 55, 0));
-    margin-top: 40px; /* Add extra space between footer and content above */
+    margin-top: 20px; /* Add extra space between footer and content above */
 }
 
 
